[gd_scene load_steps=3 format=3 uid="uid://dj6am7htam1ul"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_awpth"]
[ext_resource type="Theme" uid="uid://0a7264asjqtn" path="res://Assets/font/TextFont.tres" id="2_4ytr2"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_awpth")

[node name="menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="btn_saltar" type="Button" parent="menu"]
layout_mode = 2
theme = ExtResource("2_4ytr2")
text = "Saltar"

[node name="btn_loja" type="Button" parent="menu"]
layout_mode = 2
theme = ExtResource("2_4ytr2")
text = "Loja"

[node name="btn_opcoes" type="Button" parent="menu"]
layout_mode = 2
theme = ExtResource("2_4ytr2")
text = "*"

[node name="btn_sair" type="Button" parent="menu"]
layout_mode = 2
theme = ExtResource("2_4ytr2")
text = "Sair"

[node name="Opcoes" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Opcoes"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="video" type="Button" parent="Opcoes/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ytr2")
text = "Video"

[node name="volume" type="Button" parent="Opcoes/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4ytr2")
text = "Volume"

[node name="Video" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="resolucao" type="Label" parent="Video/HBoxContainer/labels"]
layout_mode = 2

[node name="checkboxes" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="Volume" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="menu/btn_saltar" to="." method="_on_btn_saltar_pressed"]
[connection signal="pressed" from="menu/btn_loja" to="." method="_on_btn_loja_pressed"]
[connection signal="pressed" from="menu/btn_opcoes" to="." method="_on_btn_opcoes_pressed"]
[connection signal="pressed" from="menu/btn_sair" to="." method="_on_btn_sair_pressed"]
[connection signal="pressed" from="Opcoes/VBoxContainer/video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Opcoes/VBoxContainer/volume" to="." method="_on_volume_pressed"]
